# crescendo

./: .gitignore  CMakeLists.txt  README.md
examples/anasaziGeneralizedEigen/: CMakeLists.txt
examples/epetra1DMatrixAssembly/: main.cpp
examples/epetraCrsMatrix/: main.cpp
examples/exodusMesh/: hex8_10x10x10.g  hex8_10x10x10_thin.g  input.i  test_2elem.g  two_hex8_elements.g
examples/parseTest/: CMakeLists.txt  input.i  main.cpp
examples/stkMeshSelectors/: CMakeLists.txt  main.cpp  test_2elem.g
examples/stkOutputLogging/: main.cpp
include/: EigenSolver.h  EigenSolver.hpp  ElasticMaterial.hpp  Element.h  Parser.h  ParserCmdBlock.h  ParserDictionary.h  ParserUtil.h  Simulation.h  integrateMatrices.h  integrateMatrices.hpp
src/: CrescendoMain.cpp  EigenSolver.cpp  ElasticMaterial.cpp  Element.cpp  Parser.cpp  ParserCmdBlock.cpp  ParserDictionary.cpp  ParserUtil.cpp  Simulation.cpp  crescendo.cpp  integrateMatrices.cpp
unit_tests/: UnitHexMesh.cpp  UnitMain.cpp
utility/: do-configure
